[gd_scene load_steps=4 format=3 uid="uid://bsm48cdd0tg3f"]

[ext_resource type="Texture2D" uid="uid://bxp3qv84t574l" path="res://assets/textures/Gabor_02-512x512.png" id="1_562bg"]
[ext_resource type="Script" path="res://scripts/conspiracy_theory_button.gd" id="1_1638v"]
[ext_resource type="FontFile" uid="uid://dbli7jexs0nak" path="res://assets/ui/GelatinTTFCAPS.ttf" id="2_tl1pr"]

[node name="Control" type="Button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.0
offset_top = -53.0
offset_right = 159.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1638v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.152941, 0.152941, 0.45098)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_562bg")
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title_label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tl1pr")
theme_override_font_sizes/font_size = 30
text = "Title"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="description_label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_tl1pr")
theme_override_font_sizes/font_size = 25
text = "description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 3

[node name="level_label" type="Label" parent="MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 1
text = "0/3"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
